cython_version/slurm-5249110.out
running build_ext
skipping 'lib/qvmc/utils.c' Cython extension (up-to-date)
cythoning lib/qvmc/state.pyx to lib/qvmc/state.c
building 'lib.qvmc.state' extension
gcc -pthread -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -fPIC -I/home/hanbury.p/env/include -I/shared/centos7/python/3.7.1/include/python3.7m -c lib/qvmc/state.c -o build/temp.linux-x86_64-3.7/lib/qvmc/state.o
lib/qvmc/state.c:1:2: error: #error Do not use this file, it is the result of a failed Cython compilation.
 #error Do not use this file, it is the result of a failed Cython compilation.
  ^
/home/hanbury.p/env/lib/python3.7/site-packages/Cython/Compiler/Main.py:367: FutureWarning: Cython directive 'language_level' not set, using 2 for now (Py2). This will change in a later release! File: /home/hanbury.p/feiguin/vmc/cython_version/lib/qvmc/state.pyx
  tree = Parsing.p_module(s, pxd, full_module_name)

Error compiling Cython file:
------------------------------------------------------------
...
            if i in positive_positions:
                state.append(1)
            else:
                state.append(-1)
        
        state = np.asarray(state)
                 ^
------------------------------------------------------------

lib/qvmc/state.pyx:38:18: cimported module has no attribute 'asarray'

Error compiling Cython file:
------------------------------------------------------------
...
            if i in positive_positions:
                state.append(1)
            else:
                state.append(-1)
        
        state = np.asarray(state)
                 ^
------------------------------------------------------------

lib/qvmc/state.pyx:38:18: Compiler crash in AnalyseExpressionsTransform

ModuleNode.body = StatListNode(state.pyx:1:0)
StatListNode.stats[8] = StatListNode(state.pyx:11:0)
StatListNode.stats[0] = PyClassDefNode(state.pyx:11:0,
    name = 'State')
PyClassDefNode.body = StatListNode(state.pyx:12:4)
StatListNode.stats[2] = DefNode(state.pyx:28:4,
    is_cyfunction = True,
    modifiers = [...]/0,
    name = 'randomize_state',
    np_args_idx = [...]/0,
    num_required_args = 1,
    outer_attrs = [...]/2,
    py_wrapper_required = True,
    reqd_kw_flags_cname = '0',
    used = True)
File 'ExprNodes.py', line 5338, in infer_type: SimpleCallNode(state.pyx:38:26,
    result_is_used = True,
    use_managed_ref = True)
File 'ExprNodes.py', line 6826, in infer_type: AttributeNode(state.pyx:38:18,
    attribute = 'asarray',
    is_attribute = 1,
    is_numpy_attribute = True,
    needs_none_check = True,
    result_is_used = True,
    use_managed_ref = True)

Compiler crash traceback from this point on:
  File "/home/hanbury.p/env/lib/python3.7/site-packages/Cython/Compiler/ExprNodes.py", line 6826, in infer_type
    return node.entry.type
AttributeError: 'NoneType' object has no attribute 'type'
error: command 'gcc' failed with exit status 1
